[gd_scene load_steps=14 format=2]

[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/controls/btn_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/controls/btn_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/controls/btn_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/game_over/GameOver.gd" type="Script" id=5]
[ext_resource path="res://ui/game_over/white.png" type="Texture" id=6]
[ext_resource path="res://ui/game_over/btn_game_over.tres" type="DynamicFont" id=7]
[ext_resource path="res://ui/game_over/btn_normal.tres" type="StyleBox" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float amount: hint_range(0.0, 5.0);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = 4.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 60.0
content_margin_bottom = 60.0
bg_color = Color( 0, 0, 0.580392, 0.823529 )
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color( 0.054902, 0, 0.705882, 0.270588 )
border_blend = true
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
corner_detail = 1

[sub_resource type="DynamicFont" id=4]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="GameOver" type="TextureRect"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.10803
margin_bottom = -1.10803
texture = ExtResource( 6 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 181.0
margin_top = 193.0
margin_right = 803.0
margin_bottom = 366.0
alignment = 1

[node name="GameOver" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 622.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 4 )
text = "Game Over!"
align = 1

[node name="Reason" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 622.0
margin_bottom = 173.0
rect_min_size = Vector2( 622, 0 )
custom_fonts/font = SubResource( 5 )
text = "You ran out of money!"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -100.0
margin_right = -60.0
margin_bottom = -30.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="Panel/HBoxContainer"]
margin_left = 244.0
margin_right = 430.0
margin_bottom = 70.0
rect_min_size = Vector2( 186, 0 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Retry"

[node name="NextLevel" type="Button" parent="Panel/HBoxContainer"]
margin_left = 434.0
margin_right = 620.0
margin_bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
text = "Next Level"
[connection signal="pressed" from="Panel/HBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/NextLevel" to="." method="_on_NextLevel_pressed"]
